--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,22 @@
-black
-colorlog
-dacite
 dvc
-flake8
-isort
 numpy
 omegaconf
 openai
 pandas
 pre-commit
-pytest
-pytest-cov
-pytest-mock
-toml
 
 # --------- hydra --------- #
 hydra-core==1.3.1
 hydra-colorlog==1.2.0
 hydra-optuna-sweeper==1.2.0
+
+# --------- pytest --------- #
+pytest
+pytest-cov
+pytest-mock
+
+# --------- styling --------- #
+black
+colorlog
+flake8
+isort
