--- a/configs/input/github.yaml
+++ b/configs/input/github.yaml
@@ -1,2 +1,2 @@
-input_path: https://github.com/graviraja/MLOps-Basics
-save_path: None
+# GitHub repository.
+url: https://github.com/eli64s/django_social_media_app
