--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,8 +6,8 @@ repos:
     rev: v4.3.0
     hooks:
       # list of supported hooks: https://pre-commit.com/hooks.html
-      #- id: trailing-whitespace
-      #- id: end-of-file-fixer
+      - id: trailing-whitespace
+      - id: end-of-file-fixer
       - id: check-docstring-first
       - id: check-yaml
       - id: debug-statements
