--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,10 @@
-# --------- modules --------- #
-dvc
-omegaconf
-openai
-pandas
-pipdeptree
-PyGithub
-pre-commit
-
-# --------- hydra --------- #
+colorlog==6.7.0
+GitPython==3.1.30
 hydra-core==1.3.1
-hydra-colorlog==1.2.0
-hydra-optuna-sweeper==1.2.0
+markdownify==0.11.6
+omegaconf==2.3.0
+openai==0.26.1
+pandas==1.5.2
 
 # --------- pytest --------- #
 pytest
@@ -19,6 +13,5 @@ pytest-mock
 
 # --------- styling --------- #
 black
-colorlog
 flake8
 isort
