--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -2,10 +2,10 @@
 defaults:
   - _self_
   - driver: openai
-  - repository: github
   - html: tags
+  - repository: github
 
-doc_file: output/raw_docs.csv
-html_file: output/html_docs.html
-md_file: output/output.md
-pkgs_file: conf/data/icons.json
+docs: docs/raw_docs.csv
+html: docs/html_docs.html
+mrkd: docs/output.md
+pkgs: conf/data/icons.json
