--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,19 @@
 [tool.poetry]
-name = "PyDocsAI"
+name = "PydocsAI"
 version = "0.0.0"
 description = "Automate README creation and documentation for your projects!"
 authors = "eli64s"
 license = "Apache-2.0"
 readme = "README.md"
-homepage = "https://github.com/eli64s/PyDocsAI"
-repository = "https://github.com/eli64s/PyDocsAI"
+homepage = "https://github.com/eli64s/PydocsAI"
+repository = "https://github.com/eli64s/PydocsAI"
 documentation = ""
 classifiers = [
     "Development Status :: 5 - Production/Stable",
 ]
 
 [tool.poetry.urls]
-Changelog = "https://github.com/eli64s/PyDocsAI/releases"
+Changelog = "https://github.com/eli64s/PydocsAI/releases"
 
 [tool.poetry.dependencies]
 python = "^3.7"
