--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
-colorlog==6.7.0
-dacite==1.7.0
-GitPython==3.1.31
-mdutils==1.4.0
-openai==0.26.1
-pandas==1.5.2
+black
+colorlog
+dacite
+flake8
+GitPython
+isort
+openai
+pandas
 pipreqs
-pytest==7.2.1
-setuptools==66.1.1
+pytest
+setuptools
 tabulate
-toml==0.10.2
+toml
