Repository clean up.

--- a/setup/environment.yaml
+++ b/setup/environment.yaml
@@ -1,4 +1,4 @@
-name: pydocsai
+name: base
 channels:
   - conda-forge
   - defaults
@@ -91,3 +91,4 @@ dependencies:
       - yarg==0.1.9
       - yarl==1.8.2
       - zipp==3.14.0
+prefix: /Users/k01101011/miniconda/envs/myenv
