Repository clean up.

--- a/conf/conf.toml
+++ b/conf/conf.toml
@@ -5,7 +5,7 @@ key = "<OPENAI-API-KEY>"
 
 # GitHub
 [github]
-file_type = "src/*.py"
+dirs = "src/*.py"
 url = "https://github.com/eli64s/PydocsAI"
 
 # Paths
@@ -19,14 +19,15 @@ md = "docs/readme.md"
 head = """\n<div align="center">\n<h1 align="center">
 \n<img src="https://raw.githubusercontent.com/PKief/vscode-material-icon-theme/ec559a9f6bfd399b82bb44393651661b08aaf7ba/icons/folder-markdown-open.svg" width="100">
 \n<div><p>{}</p></h1>
-\n  <h3 align="center">[insert-project-summary]</h3>
+
+\n> [insert-project-summary]
 \n{}
 \n</div>
 \n\n---
 """
 
 body = """
-\n## Overview
+\n## Introduction
 \n> [insert-description]
 \n## Feautres
 \n> [insert-description]
@@ -45,34 +46,24 @@ tree = """
 """
 
 usage = """
-\n---
-
+\n---\n
 \n## Getting Started
-
 \n### Prerequisites
-
 \nBefore you begin, ensure that you have the following prerequisites installed:
 
 \n> - [insert-prerequisites-if-needed]
 
 \n### Installation
+\n1. Clone the {name} repository:
 
-\n1. Clone the {} repository:
-
-\n```sh\ngit clone {} && cd {}\n```
-
+\n```sh\ngit clone {url} && cd {name}\n```
 \n2. Create a new Conda environment and install the required dependencies:
-
-\n```sh\nconda env create -f setup/environment.yaml\nconda activate {}\n```
-
+\n```sh\nconda env create -f setup/environment.yaml\nconda activate {name}\n```
 \n> 3. [insert-additional-steps]
 
 \n```sh\n #... \n```
-
-\n### Running {}
-
+\n### Running {name}
 \n```sh\n# ... \n```
-
 \n---
 
 \n## Roadmap
@@ -80,14 +71,13 @@ usage = """
 \n> - [X] [insert-task]
 \n> - [ ] [insert-task]
 \n> - [ ] [insert-task]
-
 \n---
 
 \n## Contributing
 \n> [insert-description]
 \n---
 
-## 🙏 Acknowledgments
+## Acknowledgments
 \n> [insert-description]
 \n---
 """
