--- a/setup/environment.yaml
+++ b/setup/environment.yaml
@@ -49,11 +49,16 @@ dependencies:
       - attrs==22.2.0
       - beautifulsoup4==4.11.2
       - black==23.1.0
+      - blis==0.7.9
+      - catalogue==2.0.8
       - click==8.1.3
       - colorlog==6.7.0
+      - confection==0.0.4
       - coverage==7.1.0
+      - cymem==2.0.7
       - dacite==1.7.0
       - docopt==0.6.2
+      - en-core-web-sm==3.5.0
       - exceptiongroup==1.1.0
       - flake8==6.0.0
       - frozenlist==1.3.3
@@ -63,31 +68,49 @@ dependencies:
       - importlib-metadata==6.0.0
       - iniconfig==2.0.0
       - isort==5.12.0
+      - jinja2==3.1.2
+      - joblib==1.2.0
+      - langcodes==3.3.0
       - markdown==3.4.1
+      - markupsafe==2.1.2
       - mccabe==0.7.0
       - mdutils==1.4.0
       - multidict==6.0.4
+      - murmurhash==1.0.9
       - mypy-extensions==1.0.0
+      - nltk==3.8.1
       - numpy==1.24.2
       - openai==0.26.1
       - packaging==23.0
       - pandas==1.5.2
       - pathspec==0.11.0
+      - pathy==0.10.1
       - pipreqs==0.4.11
       - platformdirs==3.0.0
+      - preshed==3.0.8
       - pycodestyle==2.10.0
+      - pydantic==1.10.5
       - pyflakes==3.0.1
       - pytest==7.2.1
       - python-dateutil==2.8.2
       - pytz==2022.7.1
+      - regex==2022.10.31
       - setuptools==66.1.1
       - six==1.16.0
+      - smart-open==6.3.0
       - smmap==5.0.0
       - soupsieve==2.4
+      - spacy==3.5.0
+      - spacy-legacy==3.0.12
+      - spacy-loggers==1.0.4
+      - srsly==2.4.5
       - tabulate==0.9.0
+      - thinc==8.1.7
       - toml==0.10.2
       - tomli==2.0.1
+      - typer==0.7.0
       - typing-extensions==4.5.0
+      - wasabi==1.1.1
       - yarg==0.1.9
       - yarl==1.8.2
       - zipp==3.14.0
