--- a/conf/templates/base_py.toml
+++ b/conf/templates/base_py.toml
@@ -4,8 +4,11 @@
 head = """\n<div align="center">
 <h1 align="center">
 <img src="https://raw.githubusercontent.com/PKief/vscode-material-icon-theme/ec559a9f6bfd399b82bb44393651661b08aaf7ba/icons/folder-markdown-open.svg" width="100" />
-<br>{}</h1>
-\n> <h3 align="center">[👉 insert-project-summary]</h3>
+<br>
+{}
+</h1>
+\n> <h3 align="center">[📌  insert-project-summary]</h3>
+> <h3 align="center">🚀 Developed using OpenAI's language model API and the software tools below.</h3>
 > <p align="center">
 > {}
 > </p>
@@ -16,7 +19,7 @@ head = """\n<div align="center">
 toc = """
 \n## 📦 Table of Contents
 
-\n- [📍 Introdcution](#-introdcution)
+\n- [👋 Introdcution](#-introdcution)
 \n- [🔮 Features](#-features)
 \n- [🌲 Repository Structure](#repository-structure)
 \n- [🧩 Modules](#modules)
@@ -32,10 +35,10 @@ toc = """
 \n---"""
 
 body = """
-\n## 📍 Introduction
-\n> [👉 insert-description]
+\n## 👋 Introduction
+\n> `[📌  insert-description]`
 \n## 🔮 Feautres
-\n> [👉 insert-description]
+\n{}
 """
 
 modules = """
@@ -56,7 +59,7 @@ usage = """\n<hr />\n
 \n### Prerequisites
 \nBefore you begin, ensure that you have the following prerequisites installed:
 
-\n> - [👉 insert-prerequisites-if-needed]
+\n- `[📌  insert-prerequisites-if-needed]`
 
 \n### Installation
 \n1. Clone the {name} repository:
@@ -64,7 +67,7 @@ usage = """\n<hr />\n
 \n```sh\ngit clone {url} && cd {name}\n```
 \n2. Create a new Conda environment and install the required dependencies:
 \n```sh\nconda env create -f setup/environment.yaml\nconda activate {name}\n```
-\n> 3. [👉 insert-additional-steps]
+\n3. `[📌  insert-additional-steps]`
 
 \n```sh\n #... \n```
 \n### Running {name}
@@ -73,24 +76,38 @@ usage = """\n<hr />\n
 
 ## 🗺 Roadmap
 
-> - [X] [👉 insert-task]
-> - [ ] [👉 insert-task]
-> - [ ] [👉 insert-task]
+> - [X] `[📌  insert-task]`
+> - [ ] `[📌  insert-task]`
+> - [ ] `[📌  insert-task]`
 \n---
 
 ## 🤝 Contributing
-\n> [👉 insert-description]
+
+We appreciate any contributions you can make to this project! To contribute, please follow these steps:
+
+1. Fork the repository.
+2. Create a new branch with a descriptive name (e.g., `feature-add-new-feature` or `bugfix-issue-123`).
+3. Make your changes in the new branch.
+4. Commit your changes, and push them to your fork.
+5. Create a pull request to the original repository.
+
+Please ensure your code follows the project's coding style and passes any tests before submitting a pull request.  
+If you have any questions or need assistance, feel free to open an issue.
 \n---
 
 ## 🪪 License
-\n> [👉 insert-description]
+
+This project is licensed under the `[📌  insert-license-i.e-MIT]` License. See the [LICENSE](LICENSE) file for more information.
+
 \n---
 
 ## 📲 Contact
-\n> [👉 insert-description]
+
+If you have any questions or concerns, please open an issue on GitHub or contact the repository owner at `[📌  your-email@example.com]`
+
 \n---
 
 ## 🙏 Acknowledgments
-\n> [👉 insert-description]
+\n> `[📌  insert-description]`
 \n---
 """
