--- a/setup/environment.yaml
+++ b/setup/environment.yaml
@@ -1,4 +1,4 @@
-name: base
+name: readmeai
 channels:
   - conda-forge
   - defaults
@@ -57,6 +57,7 @@ dependencies:
       - coverage==7.1.0
       - cymem==2.0.7
       - dacite==1.7.0
+      - deprecated==1.2.13
       - docopt==0.6.2
       - en-core-web-sm==3.5.0
       - exceptiongroup==1.1.0
@@ -91,6 +92,9 @@ dependencies:
       - pycodestyle==2.10.0
       - pydantic==1.10.5
       - pyflakes==3.0.1
+      - pygithub==1.58.0
+      - pyjwt==2.6.0
+      - pynacl==1.5.0
       - pytest==7.2.1
       - python-dateutil==2.8.2
       - pytz==2022.7.1
@@ -111,6 +115,7 @@ dependencies:
       - typer==0.7.0
       - typing-extensions==4.5.0
       - wasabi==1.1.1
+      - wrapt==1.15.0
       - yarg==0.1.9
       - yarl==1.8.2
       - zipp==3.14.0
